specified diam funding for KD15

--- a/FundingRequest.tex
+++ b/FundingRequest.tex
@@ -1,59 +1,63 @@
 \documentclass[a4paper,10pt]{article}
-\usepackage{geometry,graphicx,multirow,algorithm,algorithmic,amsmath,tikz, subfigure,lscape,array,listings,textcomp,hyperref,color,amsthm, amsfonts, amssymb, multicol}
-\geometry{a4paper}
-\usetikzlibrary{shapes,calc}
-\setlength{\parindent}{0pt}
+\usepackage{graphicx,hyperref}
+\usepackage[top=90pt,bottom=90pt,left=90pt,right=100pt]{geometry}
 
 \begin{document} 
+
 \clearpage
 \thispagestyle{empty}
-\begin{flushright}
- \includegraphics[clip = true, viewport = 0cm 0cm 4.5cm 3.5cm, scale = 1]{SIAMSC_Delft}
 
-\vspace{-1cm}
-\today
-\end{flushright}
+\begin{figure}
+\hspace{10cm} \includegraphics[clip = true, viewport = 0cm 0cm 4.5cm 3.5cm, scale = 1]{SIAMSC_Delft} 
+\end{figure}
 
+\textbf{Funding Request for Student Krylov Day 2015}
+\bigskip
+\bigskip
 
-Dear Mr. Van Horssen,
+Dear Prof. Van Horssen, \hfill \today
 
 \bigskip
-We, three PhD students of the Numerical Analysis section at the TU Delft have recently founded a SIAM Student Chapter at our university. This letter is meant to ask for some funding by our university, in order to become even more succesfull. 
-
-Our Student Chapter is the first and only division of SIAM in The Netherlands, and it is meant to bring together MSc and PhD students, postdocs and professors from all mathematically-oriented departments. The Chapter organizes seminars, lectures (both on research and on software tools), company visits and social events. Our faculty advisors are Martin van Gijzen and Kees Vuik.
+We have recently founded a \textit{SIAM Student Chapter} at our university. Our Student Chapter is the first division of SIAM in The Netherlands, and it is meant to bring together MSc and PhD students, postdocs and professors from all mathematically-oriented departments. The Chapter organizes seminars, lectures (both on research and on software tools), company visits and social events. Our faculty advisors are Martin van Gijzen and Kees Vuik and we currently have about 45 student members, mostly from the Numerical Analysis section.
 
 \bigskip
-Currently involved departments are:
+\noindent Currently involved departments at TU Delft are:
 \begin{itemize}
- \item Applied Mathematics (sections Statistics, Mathematical Physics, Numerical Analysis);
- \item Aerospace Engineering (section Aerodynamics);
- \item Electrical Engineering (section Circuits \& Systems and Intelligent Electrical Power Grids);
- \item Marine and Transport Technology (section Offshore \& Dredging Engineering);
+ \item Applied Mathematics (sections Statistics, Mathematical Physics, Numerical Analysis),
+ \item Aerospace Engineering (section Aerodynamics),
+ \item Electrical Engineering (section Circuits \& Systems and Intelligent Electrical Power Grids),
+ \item Marine and Transport Technology (section Offshore \& Dredging Engineering),
  \item Geoscience \& Engineering (section Petroleum engineering),
 \end{itemize}
-and we hope to attract more different departments soon.
+and we hope to attract further departments in the future.
 
 \bigskip
-SIAM supports our Student Chapter by 500 dollars per year. This money is used to promote the Student Chapter (hanging posters around), and to pay food and drinks during lectures. Furthermore, external speakers will be invited, whose travel we need to pay. In addition, a one-day workshop will be held on February 2, 2015, which will be visited by different PhD students throughout Europe. 
+SIAM supports our Student Chapter with 500 dollars per year. This money is used to promote the Student Chapter (posters, homepage), and to pay food and drinks during our meetings. Furthermore, external speakers will be invited, whose travel we need to pay. In addition to our monthly meetings, we are organizing a \textbf{one-day workshop on Krylov methods} which will be held on February 2, 2015 at TU Delft. Therefore, we invited PhD students from different European countries who will present their recent work on Krylov methods. Moreover, we would like to organize a joint diner in Delft at the end of the workshop and offer refreshments during the day. More information can be found at our homepage:
+\begin{center}
+ \url{http://sscdelft.github.io/activities/2015/02/02/krylov-day.html}
+\end{center}
+
+% \bigskip
+% Many succesfull Student Chapters also obtain yearly funding from their own university. In this way, the Student Chapters can reach out to more different departments and invite more people to their talks. Is it possible that our Chapter also obtains some regular funding from the TU Delft?
+
+% \bigskip
+% If you have any further enquiries, please do not hesitate to contact us.
 
 \bigskip
-Many succesfull Student Chapters also obtain yearly funding from their own university. In this way, the Student Chapters can reach out to more different departments and invite more people to their talks. Is it possible that our Chapter also obtains some regular funding from the TU Delft?
+\noindent For the realization of this workshop, we kindly ask you for additional financial support.
 
 \bigskip
-If you have any further enquiries, please do not hesitate to contact us.
+\noindent Yours Sincerely,
 
+\bigskip 
 \bigskip
-Yours Sincerely,
 
-\bigskip
-\ 
+\noindent Manuel Baumann (President)
 
-\bigskip
-Manuel Baumann (President)
+\noindent Reinaldo Astidullo (Vice-President)
 
-Reinaldo Astidullo (Vice-President)
+\noindent Thea Vuik (Secretary and Treasurer)
 
-Thea Vuik (Secretary and Treasurer)
+\noindent \url{http://sscdelft.github.io}
 
-\url{http://sscdelft.github.io}
 \end{document}
