diner is dinner

--- a/FundingRequest.tex
+++ b/FundingRequest.tex
@@ -32,7 +32,7 @@ We have recently founded a \textit{SIAM Student Chapter} at our university. Our 
 and we hope to attract further departments in the future.
 
 \bigskip
-SIAM supports our Student Chapter with 500 dollars per year. This money is used to promote the Student Chapter (posters, homepage), and to pay food and drinks during our meetings. Furthermore, external speakers will be invited, whose travel we need to pay. In addition to our monthly meetings, we are organizing a \textbf{one-day workshop on Krylov methods} which will be held on February 2, 2015 at TU Delft. Therefore, we invited PhD students from different European countries who will present their recent work on Krylov methods. Moreover, we would like to organize a joint diner in Delft at the end of the workshop and offer refreshments during the day. More information can be found at our homepage:
+SIAM supports our Student Chapter with 500 dollars per year. This money is used to promote the Student Chapter (posters, homepage), and to pay food and drinks during our meetings. Furthermore, external speakers will be invited, whose travel we need to pay. In addition to our monthly meetings, we are organizing a \textbf{one-day workshop on Krylov methods} which will be held on February 2, 2015 at TU Delft. Therefore, we invited PhD students from different European countries who will present their recent work on Krylov methods. Moreover, we would like to organize a joint dinner in Delft at the end of the workshop and offer refreshments during the day. More information can be found at our homepage:
 \begin{center}
  \url{http://sscdelft.github.io/activities/2015/02/02/krylov-day.html}
 \end{center}
