--- a/FundingRequest.tex
+++ b/FundingRequest.tex
@@ -60,4 +60,20 @@ SIAM supports our Student Chapter with 500 dollars per year. This money is used 
 
 \noindent \url{http://sscdelft.github.io}
 
+\newpage
+Please find attached our estimate of costs:
+\begin{table}[h]
+\centering
+\begin{tabular}{lccr}
+ Activity & Cost estimate & Participants & Total Costs  \\
+ \hline
+ Lunch at Aula & 10 EUR  & 20  & 200 EUR   \\
+ Refreshments & 5 EUR & 20 & 120 EUR \\
+ Diner in city center & 20 EUR & 10  & 200 EUR   \\
+ Book of abstracts (10pages)& 1 EUR  & 25 & 25 EUR \\
+ & & & \textbf{545 EUR}
+\end{tabular}
+\end{table}
+
+
 \end{document}
