--- a/FundingRequest.tex
+++ b/FundingRequest.tex
@@ -68,10 +68,10 @@ Please find attached our estimate of costs:
  Activity & Cost estimate & Participants & Total Costs  \\
  \hline
  Lunch at Aula & 10 EUR  & 20  & 200 EUR   \\
- Refreshments & 5 EUR & 20 & 120 EUR \\
- Diner in city center & 20 EUR & 10  & 200 EUR   \\
- Book of abstracts (10pages)& 1 EUR  & 25 & 25 EUR \\
- & & & \textbf{545 EUR}
+ Refreshments & 5 EUR & 20 & 100 EUR \\
+ ?Dinner in city center & 20 EUR & 15  & 300 EUR   \\
+%  Book of abstracts (10pages)& 1 EUR  & 25 & 25 EUR \\
+ & & & \textbf{600 EUR}
 \end{tabular}
 \end{table}
 
