--- a/FundingRequest.tex
+++ b/FundingRequest.tex
@@ -32,7 +32,7 @@ We have recently founded a \textit{SIAM Student Chapter} at our university. Our 
 and we hope to attract further departments in the future.
 
 \bigskip
-SIAM supports our Student Chapter with 500 dollars per year. This money is used to promote the Student Chapter (posters, homepage), and to pay food and drinks during our meetings. Furthermore, external speakers will be invited, whose travel we need to pay. In addition to our monthly meetings, we are organizing a \textbf{one-day workshop on Krylov methods} which will be held on February 2, 2015 at TU Delft. Therefore, we invited PhD students from different European countries who will present their recent work on Krylov methods. Moreover, we would like to organize a joint dinner in Delft at the end of the workshop and offer refreshments during the day. More information can be found at our homepage:
+SIAM supports our Student Chapter with 500 dollars per year. This money is used to promote the Student Chapter (posters, homepage), and to pay food and drinks during our meetings. Furthermore, external speakers will be invited, whose travel we need to pay. In addition to our monthly meetings, we are organizing a \textbf{one-day workshop on Krylov methods} which will be held on February 2, 2015 at TU Delft. Therefore, we invited PhD students from different European countries who will present their recent work on Krylov methods. During the workshop, we would like to organize a joint lunch and offer refreshments (see attached cost estimate). All information about our workshop can be found online:
 \begin{center}
  \url{http://sscdelft.github.io/activities/2015/02/02/krylov-day.html}
 \end{center}
@@ -52,13 +52,16 @@ SIAM supports our Student Chapter with 500 dollars per year. This money is used 
 \bigskip 
 \bigskip
 
-\noindent Manuel Baumann (President)
+\noindent Manuel Baumann (President) \hfill Kees Vuik (Faculty Advisor)
 
 \noindent Reinaldo Astidullo (Vice-President)
 
 \noindent Thea Vuik (Secretary and Treasurer)
 
 \noindent \url{http://sscdelft.github.io}
+
+\bigskip
+\noindent Attached: Cost estimate
 
 \newpage
 Please find attached our estimate of costs:
@@ -67,11 +70,11 @@ Please find attached our estimate of costs:
 \begin{tabular}{lccr}
  Activity & Cost estimate & Participants & Total Costs  \\
  \hline
- Lunch at Aula & 10 EUR  & 20  & 200 EUR   \\
+ Lunch at TUD Sports Center & 10 EUR  & 20  & 200 EUR   \\
  Refreshments & 5 EUR & 20 & 100 EUR \\
- ?Dinner in city center & 20 EUR & 15  & 300 EUR   \\
+ Snacks and good-bye drinks & 50 EUR & -  & 50 EUR   \\
 %  Book of abstracts (10pages)& 1 EUR  & 25 & 25 EUR \\
- & & & \textbf{600 EUR}
+ & & & \textbf{350 EUR}
 \end{tabular}
 \end{table}
 
