Major changes to Funding Request, ready for sending?

--- a/FundingRequest.tex
+++ b/FundingRequest.tex
@@ -18,21 +18,10 @@
 Dear Prof. Van Horssen, \hfill \today
 
 \bigskip
-We have recently founded a \textit{SIAM Student Chapter} at our university. Our Student Chapter is the first division of SIAM in The Netherlands, and it is meant to bring together MSc and PhD students, postdocs and professors from all mathematically-oriented departments. The Chapter organizes seminars, lectures (both on research and on software tools), company visits and social events. Our faculty advisors are Martin van Gijzen and Kees Vuik and we currently have about 45 student members, mostly from the Numerical Analysis section.
+We have recently founded a \textit{SIAM Student Chapter} at our university. Our Student Chapter is the first division of SIAM in The Netherlands, and it is meant to bring together MSc and PhD students, postdocs and professors from all mathematically-oriented departments. The Chapter organizes seminars, lectures (both on research and on software tools), company visits and social events, which are financially supported by SIAM. Our faculty advisors are Martin van Gijzen and Kees Vuik and we currently have about 50 student members from different departments at TU Delft.
 
 \bigskip
-\noindent Currently involved departments at TU Delft are:
-\begin{itemize}
- \item Applied Mathematics (sections Statistics, Mathematical Physics, Numerical Analysis),
- \item Aerospace Engineering (section Aerodynamics),
- \item Electrical Engineering (section Circuits \& Systems and Intelligent Electrical Power Grids),
- \item Marine and Transport Technology (section Offshore \& Dredging Engineering),
- \item Geoscience \& Engineering (section Petroleum engineering),
-\end{itemize}
-and we hope to attract further departments in the future.
-
-\bigskip
-SIAM supports our Student Chapter with 500 dollars per year. This money is used to promote the Student Chapter (posters, homepage), and to pay food and drinks during our meetings. Furthermore, external speakers will be invited, whose travel we need to pay. In addition to our monthly meetings, we are organizing a \textbf{one-day workshop on Krylov methods} which will be held on February 2, 2015 at TU Delft. Therefore, we invited PhD students from different European countries who will present their recent work on Krylov methods. During the workshop, we would like to organize a joint lunch and offer refreshments (see attached cost estimate). All information about our workshop can be found online:
+At this moment, we are organizing a \textbf{one-day workshop on Krylov methods} which will be held on February 2, 2015 at TU Delft. Therefore, we invited PhD students from different European countries who will present their recent work on Krylov methods. During the workshop, we would like to organize a joint lunch and offer refreshments (see cost estimate below). All information about our workshop can be found online:
 \begin{center}
  \url{http://sscdelft.github.io/activities/2015/02/02/krylov-day.html}
 \end{center}
@@ -44,7 +33,7 @@ SIAM supports our Student Chapter with 500 dollars per year. This money is used 
 % If you have any further enquiries, please do not hesitate to contact us.
 
 \bigskip
-\noindent For the realization of this workshop, we kindly ask you for additional financial support.
+\noindent For the realization of this workshop, we kindly ask DIAM for the financial support of 350 EUR.
 
 \bigskip
 \noindent Yours Sincerely,
@@ -54,17 +43,15 @@ SIAM supports our Student Chapter with 500 dollars per year. This money is used 
 
 \noindent Manuel Baumann (President) \hfill Kees Vuik (Faculty Advisor)
 
-\noindent Reinaldo Astidullo (Vice-President)
+\noindent Reinaldo Astidullo (Vice-President) \hfill Martin van Gijzen (Faculty Advisor)
 
 \noindent Thea Vuik (Secretary and Treasurer)
 
 \noindent \url{http://sscdelft.github.io}
 
 \bigskip
-\noindent Attached: Cost estimate
 
-\newpage
-Please find attached our estimate of costs:
+\noindent Please find attached our estimate of costs:
 \begin{table}[h]
 \centering
 \begin{tabular}{lccr}
@@ -73,7 +60,6 @@ Please find attached our estimate of costs:
  Lunch at TUD Sports Center & 10 EUR  & 20  & 200 EUR   \\
  Refreshments & 5 EUR & 20 & 100 EUR \\
  Snacks and good-bye drinks & 50 EUR & -  & 50 EUR   \\
-%  Book of abstracts (10pages)& 1 EUR  & 25 & 25 EUR \\
  & & & \textbf{350 EUR}
 \end{tabular}
 \end{table}
